# company-research-agent

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: add-feature.md  check-acceptance.md  review-docs.md  setup-project.md
.claude/skills/architecture-design/: SKILL.md
.claude/skills/development-guidelines/: SKILL.md
.github/workflows/: ci.yml
.steering/20260116-EDINET-API連携/: acceptance-check.md  design.md  requirements.md  tasklist.md
.steering/20260117-EDINET-search-filter/: design.md  requirements.md  tasklist.md
.steering/20260117-LLMマルチプロバイダー対応/: acceptance-check.md  design.md  requirements.md  tasklist.md
.steering/20260117-LLM分析機能-LangGraph/: acceptance-check.md  design.md  requirements.md  tasklist.md
.steering/20260117-PDF解析マークダウン化/: acceptance-check.md  design.md  requirements.md  tasklist.md
.steering/20260117-自然言語検索機能/: acceptance-check.md  design.md  requirements.md  tasklist.md
.steering/20260118-ダウンロード構造改善/: acceptance-check.md  design.md  requirements.md  tasklist.md
config/ir_templates/: 36630_株式会社セルシス.yaml  67580_sony.yaml  72030_toyota.yaml  99840_softbankgroup.yaml
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
docs/core/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
docs/ideas/: 20260126-corporate-ir-web-scraping.md  initial-requirements.md
docs/research/: edinet-api-specification.md  xbrl-specification.md
notebooks/: test-sample.ipynb
scripts/: company_cli.py  test_edinet_api.py  validate_edinet_api.py  validate_pdf_parser.py
src/: __init__.py
src/company_research_agent/: __init__.py  __main__.py
src/company_research_agent/cli/: __init__.py  config.py  main.py  output.py  rich_output.py
src/company_research_agent/clients/: __init__.py  edinet_client.py  edinet_code_list_client.py  gemini_client.py  vision_client.py
src/company_research_agent/core/: __init__.py  config.py  doc_type_mapping.py  download_path.py  exceptions.py  logging.py  progress.py  text_utils.py  types.py
src/company_research_agent/llm/: __init__.py  config.py  factory.py  provider.py  types.py
src/company_research_agent/observability/: __init__.py  config.py  handler.py
src/company_research_agent/orchestrator/: __init__.py  query_orchestrator.py
src/company_research_agent/parsers/: __init__.py  accuracy_benchmark.py  pdf_parser.py
src/company_research_agent/prompts/: __init__.py  business_summary.py  compare_documents.py  financial_analysis.py  ir_summary.py  ir_template.py  orchestrator_system.py  period_comparison.py  risk_extraction.py  summarize_document.py
src/company_research_agent/schemas/: __init__.py  cache_schemas.py  document_filter.py  edinet_schemas.py  ir_schemas.py  llm_analysis.py  query_schemas.py
src/company_research_agent/services/: __init__.py  edinet_document_service.py  ir_scraper_service.py  local_cache_service.py
src/company_research_agent/tools/: __init__.py  analyze_document.py  compare_documents.py  download_document.py  ir_tools.py  search_company.py  search_documents.py  summarize_document.py
src/mcp_servers/: __init__.py
tests/: conftest.py
tests/e2e/: __init__.py  test_analysis_workflow.py
tests/integration/: __init__.py  conftest.py
tests/performance/: __init__.py  test_pdf_parser_performance.py
(+82 files in other folders)
