[project]
name = "company-research-agent"
version = "0.1.0"
description = "AI-powered Corporate Research Agent - 企業情報収集・分析エージェント"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pdfplumber>=0.11.0",
    "pymupdf4llm>=0.0.17",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "jupyterlab>=4.5.2",
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-google-genai>=2.1.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "respx>=0.22.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/company_research_agent", "src/mcp_servers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "UP046",  # Generic[T] -> type parameter syntax (Python 3.12+)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # load_dotenv() must run before imports
"notebooks/*" = ["E402"]  # Same for Jupyter notebooks

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["company_research_agent"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
    "langchain_google_genai.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_ollama.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
